# polly-connect

./: .env.example  .gitattributes  .gitignore  BRANCH_NOTICE.md  FEATURE_MAP.md  Polly_Quick_Start_Guide.docx  README.md  build_user_guide_docx.py  docker-compose.yml  flash_future_polly.docx  polly_flyer.html  questions.js
data/: almanac_weather.json  bible_verses.json  family_questions.json  jokes.json  kid_jokes.json  naughty_jokes.json  polly-config.json  prayers.json  questions.json  questions_adolescent.json  questions_adult.json  questions_kids.json
deploy/: nginx.conf  polly-connect.service  setup_ec2.sh
docs/: LEGACY-BOOK-SERVICE.md  LEGACY_FUNNEL_WALKTHROUGH.md  POLLY-CONNECT-FEATURES.md  POLLY_LEGACY_FUNNEL.md  Polly_Connect_Features.docx  api.md  architecture.md  wiring.md
firmware/polly-esp32/: CMakeLists.txt  audio_capture.h  audio_playback.h  config.h  polly-esp32.ino  sdkconfig.defaults
firmware/polly-esp32-esphome/: README.md  polly-esp32-custom.yaml  polly-esp32.yaml  polly-voice-assistant.yaml  secrets.yaml  secrets.yaml.example
firmware/polly-esp32-idf-archived/: ARCHIVED.md  README.md  idf_component.yml  partitions.csv
firmware/polly-esp32-idf-archived/components/micro_wake_word/: CMakeLists.txt
firmware/polly-esp32-idf-archived/components/porcupine/: CMakeLists.txt  porcupine_dummy.c
firmware/polly-esp32-idf-archived/components/porcupine/include/: pv_porcupine.h
firmware/polly-esp32-idf-archived/main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  config.h  okay_nabu.h  state_machine.h  wake_word_manager.h  websocket_client.c  wifi_manager.h
firmware/polly-s3-wakeword/: CMakeLists.txt  FLASH_INSTRUCTIONS.md  (+3 more)
hardware/: COMPONENTS_FOR_DESIGNER.md  PCB_V2_SPEC.md
music/: routes_songs.py  song_pipeline.py  test_pipeline.py
patent/: filing_receipt.md
scripts/: fill_gi_timeline.py  gen_book_guide.py  gen_gentle_jokes.py  gen_glen_book.py  gen_multi_device_guide.py  gen_naughty_jokes.py  gi_lee_chapters.py  gi_lee_chapters_v2.py  gi_lee_link_real_assets.py  gi_lee_memories.py  gi_lee_qr_demo.py  gi_lee_stories.py  inspect_gi.py  regen_book.py  regen_gi_book.py  setup_gi_lee.py
server/: Dockerfile  backfill_gpt_classify.py  backfill_memories.py  config.py  main.py  requirements-local.txt  requirements.txt
tests/: test_A.py  test_B.py  test_B_results.md  test_C.py  test_D.py  test_age_questions.py
wake-word/: COLAB_CLEAN_SLATE.md  README.md  WAKE_WORD_STATUS.md  analyze_samples.py  hey_polly.onnx  hey_polly.onnx.data  record_samples.py  test_model.py
(+180 files in other folders)
